# image-segmentation

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
src/segment_img/: __init__.py  cli.py  inference.py  results.py  visualization.py  web.py
src/segment_img.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/segment_img/web_assets/static/: app.js  styles.css
src/segment_img/web_assets/templates/: index.html
